remove string template and refactoring